--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /target/debug/.fingerprint/course_project-1ad6963236973330/invoked.timestamp
 /target/debug/.fingerprint/course_project-1ad6963236973330/test-bin-course_project
 /target/debug/.fingerprint/course_project-1ad6963236973330/test-bin-course_project.json
+/.idea/blog.iml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/.gitignore
