--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ postgres = "0.19.7"
 serde_json = "1.0"
 handlebars = "4.5.0"
 crypto-hash = "0.3.4"
+serde = { version = "1.0.193", features = ["derive"] }
