--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde_json = "1.0"
 handlebars = "4.5.0"
 crypto-hash = "0.3.4"
 serde = { version = "1.0.193", features = ["derive"] }
+rand = "0.8.5"
+chrono = "0.4.31"
